feature: filter completed & unCompleted todos

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             >
               <option value="all">all</option>
               <option value="completed">completed</option>
-              <option value="onCompleted">onCompleted</option>
+              <option value="unCompleted">unCompleted</option>
             </select>
             <!-- <button class="todo__btn">
               <svg
