feature: sort todo

--- a/index.html
+++ b/index.html
@@ -55,7 +55,6 @@
                 xmlns="http://www.w3.org/2000/svg"
                 class="todo__icon"
                 fill="none"
-                viewBox="0 0 24 24"
                 stroke="currentColor"
               >
                 <path
@@ -69,6 +68,13 @@
           </div>
         </div>
       </form>
+      <div dir="ltr" class="todo__sort">
+        <p>sort :</p>
+        <select name="" class="input todo-sort__input">
+          <option value="earliest">earliest</option>
+          <option value="latest">latest</option>
+        </select>
+      </div>
 
       <!-- لیست کارها -->
       <ul class="todo__list">
